namespace POC.Contracts.Screen;

public class ScreenDto
{
    public int Id { get; set; }
    //public string Ip { get; set; }
    
    public int ScreenProfileId { get; set; }
}